New Ottoman news events, some misc fixes for stuff I noticed

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -148,11 +148,11 @@ worldnews.21.f:0 "At least Reed did not make it to the White House. Let's see wh
 
 worldnews.22.t:0 "Jack Reed elected as President of the USA"
 worldnews.22.d:0 "Despite the massive instability rampant in the nation ever since the Great Depression in 1929, the presidential elections went forward, and the voting results are clear, Jack Reed of the Combined Syndicates of America is the 32nd President of the United States.\n\nJack Reed turned into a savvy political operator during his time in Russia, and is a dedicated proponent of Syndicalism. This stance has made him many enemies in the American society, but the association of trade unions that he leads remains strong. The AFP already contests the election results, though."
-worldnews.21.a:0 "Syndicalism stands ready to kill another healthy Democracy."
-worldnews.21.b:0 "Liberalism has degenerated into Syndicalism again. Sad."
-worldnews.21.c:0 "Congratulations to Reed and the American workers for a good choice!"
-worldnews.21.e:0 "The American workers have suffered enough. Time for Syndicalism!"
-worldnews.21.f:0 "We might have to intervene in American politics. Mobilise the troops."
+worldnews.22.a:0 "Syndicalism stands ready to kill another healthy Democracy."
+worldnews.22.b:0 "Liberalism has degenerated into Syndicalism again. Sad."
+worldnews.22.c:0 "Congratulations to Reed and the American workers for a good choice!"
+worldnews.22.e:0 "The American workers have suffered enough. Time for Syndicalism!"
+worldnews.22.f:0 "We might have to intervene in American politics. Mobilise the troops."
 
 worldnews.23.t:0 "The Polish-Lithuanian Commonwealth"
 worldnews.23.d:0 "In a surprising turn of events, the elections for the vacant throne of Poland have resulted in the restoration of a state thought to have been forgotten in history.\n\nDespite pressure from Austria and Germany, King Mindaugas III von Urach of Lithuania has been elected as the new King of Poland, and a new constitution was drafted to unite Poland and Lithuania back into the Commonwealth. It is not known if this new entity will be very stable, but the Poles seem to be enthusiastic."
@@ -326,6 +326,54 @@ worldnews.43.b:0 "Lithuania will be free. Mitteleuropa's dominance ends now!"
 worldnews.43.c:0 "Lithuania will pay a heavy price for its misguided betrayal."
 worldnews.43.e:0 "Lithuania is courageous. Perhaps an indication to Germany's growing weakness."
 worldnews.43.f:0 "Let us observe Lithuania. Perhaps the reactionary Mitteleuropa is weaker than we thought?"
+
+worldnews.44.t:0 "The Kurdish Uprising"
+worldnews.44.d:0 "Since the end of the Weltkrieg and the Arab Revolt, the Ottomans had long been the 'sick man of Europe'. Kicked out of their position as a Great Power, kicked out of the Balkans, and almost kicked out of the war by British and Arab forces storming through the Levant, it was only the victory of Germany that saved them.\n\nHowever, reality quickly turned sour again for the Ottomans. The OPDA was maintained to secure German and Austrian interests, crushing the Ottoman economy in a time where it hoped to recover, and Arab nationalism was never extinguished. Today, a spark was lit as the Ottomans promised to crush the new Kurdish state, a spark that might light up the entire Levant, especially as the Axis looks on."
+worldnews.44.a:0 "The Kurd Revolt might finally be the start of the end for the Ottoman Empire."
+worldnews.44.b:0 "The people of the Levant have had enough of the Turks. We must make our move, now."
+worldnews.44.c:0 "This Arab Revolt might suceed. One by one, the Central Powers falter and die."
+worldnews.44.e:0 "Our efforts seem to have paid off. Let us hope for the success of Islamic Communism."
+worldnews.44.f:0 "The Kurds will pay for this lowly rebellion attempt! To arms! Praise the Sultan!"
+worldnews.44.g:0 "The Kurdish state will be the one to slay the beast. To arms!"
+
+worldnews.45.t:0 "The Kurdish Independence"
+worldnews.45.d:0 "Since the end of the Weltkrieg and the Arab Revolt, the Ottomans had long been the 'sick man of Europe'. Kicked out of their position as a Great Power, kicked out of the Balkans, and almost kicked out of the war by British and Arab forces storming through the Levant, it was only the victory of Germany that saved them.\n\nHowever, reality quickly turned sour again for the Ottomans. The OPDA was maintained to secure German and Austrian interests, crushing the Ottoman economy in a time where it hoped to recover, and Arab nationalism was never extinguished. Today, much to the surprise of the entire world, the Sultan declared the new Kurdish state legitimate and called for his troops to stand down. The world now waits."
+worldnews.45.a:0 "The Kurd bet was daring, and it paid off. Perhaps a new start for the Ottoman Empire?"
+worldnews.45.b:0 "The Turkish Empire is weak. Hopefully the Arab people don't believe the Sultan's lies."
+worldnews.45.c:0 "If the Ottoman Empire sees the wrong of its ways, we may reach an understanding."
+worldnews.45.e:0 "The Ottoman reactionaries will pay regardless for all the blood spilt in the sand."
+worldnews.45.f:0 "We tolerate the Kurd's independence, as the Sultan promised them. Praise the Sultan."
+worldnews.45.g:0 "Today marks a great day, the Kurds finally have a nation state. Brothers, rejoice!"
+
+worldnews.46.t:0 "The Cypriot Uprising"
+worldnews.46.d:0 "As many expected, the declaration of independence of the Kurds was the start of a longer period of turmoil for the old Ottoman Empire, with cultures that had long been suppressed or 'integrated' pushing for their independence.\n\nNow, Cyprus joins the fray, having long been a state in flux, if not chaos, settled by the Greeks, captured by many ancient empires, Assyrians, Egyptians, Persians and the Romans, captured by the Arabic Caliphate, French Crusaders, Venetians, and finally the Ottomans until 1878, before a short and finally reverted annexation by Britain. Today, as the Greek Cypriots take arm to free their country, a new page opens in the history of this rich island."
+worldnews.46.a:0 "The Cypriots have seen much fighting. Today, they fight for their own country."
+worldnews.46.b:0 "We hope for the victory of our Greek brothers, even if we may not help ourselves."
+worldnews.46.c:0 "The Ottoman Empire continues collapsing before our eyes. Should we support Cyprus?"
+worldnews.46.e:0 "The Cypriots will pay for this betrayal. Cyprus is Turkish! Praise the Sultan!"
+worldnews.46.f:0 "Today, we finally stand ready to decide for our own people. Enough with the Empires!"
+
+worldnews.47.t:0 "The Cypriot Independence"
+worldnews.47.d:0 "As many expected, the declaration of independence of the Kurds was the start of a longer period of turmoil for the old Ottoman Empire, with cultures that had long been suppressed or 'integrated' pushing for their independence.\n\nNow, Cyprus joins the fray, having long been a state in flux, if not chaos, settled by the Greeks, captured by many ancient empires, Assyrians, Egyptians, Persians and the Romans, captured by the Arabic Caliphate, French Crusaders, Venetians, and finally the Ottomans until 1878, before a short and finally reverted annexation by Britain. Today, the Sultan has recognized the Greek Cypriot state, putting an end to four millenias of occupation by foreign powers."
+worldnews.47.a:0 "The Cypriots finally earn their independence, at the expense of the Ottomans."
+worldnews.47.b:0 "We raise a toast to our Greek Cypriot brothers. The Greeks are strong!"
+worldnews.47.c:0 "A favourable end to the Cypriots, another open wound for the Empire in the East."
+worldnews.47.e:0 "The Sultan asks for the Turk Cypriots to stand down. We must. Praise the Sultan."
+worldnews.47.f:0 "Today, we finally stand free of masters. Cyprus is ours forever! Rejoice!"
+
+worldnews.48.t:0 "The Great Arabian Revolt"
+worldnews.48.d:0 "In a world in turmoil, and with the Ottoman Empire looking weaker by the day, everyone thought that the longest running Empire on this Earth was running to an end. Instead, against all odds, it defeated all its opponents and secured its grasp on the Middle East once again.\n\nSince, the Ottoman Empire looked again unbeatable, but news of major unrest started rising at the start of this year. Slowly every day, you could hear whispers in the back streets of Jerusalem, Aleppo and Baghdad. Secret meetings in houses and mosques and ambushes on Ottoman Gendarmes. Finally, this situation clarifies itself today, as in one great blaze, the peoples of the Levant rise against the Ottomans, declaring the new states of Syria and Iraq."
+worldnews.48.a:0 "Will the Middle East ever see peace? Will the Ottomans recover to their former glory?"
+worldnews.48.b:0 "The Ottomans will never rule over the Arab people. To arms, down with the Sultan!"
+worldnews.48.c:0 "The new states of Syria and Iraq could be influenced. We merely started the fire."
+worldnews.48.e:0 "The Sultan will not suffer this rebellion. We will slay them! Praise the Sultan!"
+
+worldnews.49.t:0 "The Second Great Arabian Revolt"
+worldnews.49.d:0 "The Great Arabian Revolt was perhaps the first of its kind, a massive uprising of the Arabs against the Ottoman Empire. And yet, the Ottomans survived it as they survived many more challenges in those past three decades. For many, this seemed like the last challenge to the Ottomans.\n\n However, as the first revolt was squashed, it seems that a second one started brewing. Once again, by secret meetings and attacks on Ottoman officials, an untamed fire spread through the Middle East. Despite the best efforts of the Ottoman forces, this eventually led to a same outcome than the first. Today, another Great Arabian Revolt rises, threatening the Empire again, and casting doubt of the lasting stability of the Levant."
+worldnews.49.a:0 "The Middle East will never see peace then. A harsh lesson for the Sultan."
+worldnews.49.b:0 "We will never be defeated, we will keep rising until the Turks flee back to Ankara!"
+worldnews.49.c:0 "They might need our support, will they win this time? Can we trust them?"
+worldnews.49.e:0 "They learned nothing! All the traitors will die! Praise the Sultan!"
 
 ### City Fall Events ###
 
