Illyria now mooches off of Croatian companies

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -1444,18 +1444,18 @@ CRO_social_liberal_DEF:0 "Croatia"
 CRO_market_liberal:0 "Croatia"
 CRO_market_liberal_ADJ:0 "Croatian"
 CRO_market_liberal_DEF:0 "Croatia"
-CRO_social_conservative:0 "Kingdom of Croatia-Dalmatia"
+CRO_social_conservative:0 "Kingdom of Croatia"
 CRO_social_conservative_ADJ:0 "Croatian"
-CRO_social_conservative_DEF:0 "The Kingdom of Croatia-Dalmatia"
-CRO_authoritarian_democrat:0 "Kingdom of Croatia-Dalmatia"
+CRO_social_conservative_DEF:0 "The Kingdom of Croatia"
+CRO_authoritarian_democrat:0 "Kingdom of Croatia"
 CRO_authoritarian_democrat_ADJ:0 "Croatian"
-CRO_authoritarian_democrat_DEF:0 "The Kingdom of Croatia-Dalmatia"
-CRO_paternal_autocrat:0 "Kingdom of Croatia-Dalmatia"
+CRO_authoritarian_democrat_DEF:0 "The Kingdom of Croatia"
+CRO_paternal_autocrat:0 "Kingdom of Croatia"
 CRO_paternal_autocrat_ADJ:0 "Croatian"
-CRO_paternal_autocrat_DEF:0 "The Kingdom of Croatia-Dalmatia"
-CRO_national_populist:0 "Kingdom of Croatia-Dalmatia"
+CRO_paternal_autocrat_DEF:0 "The Kingdom of Croatia"
+CRO_national_populist:0 "Kingdom of Croatia"
 CRO_national_populist_ADJ:0 "Croatian"
-CRO_national_populist_DEF:0 "The Kingdom of Croatia-Dalmatia"
+CRO_national_populist_DEF:0 "The Kingdom of Croatia"
 
 CSA_totalist:0 "Combined Syndicates of America"
 CSA_totalist_ADJ:0 "American"
