A bunch of code

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1581,7 +1581,9 @@ LIT_republican_totalist:0 "People's Republic of Lithuania"
 LIT_republican_totalist_ADJ:0 "Lithuanian"
 LIT_republican_totalist_DEF:0 "The People's Republic of Lithuania"
 
-OTT_TF_authoritarian_democrat:0 "Young Turks"
+TUR_TF_authoritarian_democrat:0 "Young Turks"
+TUR_TF_authoritarian_democrat_ADJ:0 "Young Turk"
+TUR_TF_authoritarian_democrat_DEF:0 "The Young Turks"
 
 MON_EMP_authoritarian_democrat:0 "Mongolian Khanate"
 MON_EMP_authoritarian_democrat_ADJ:0 "Mongolian"
