--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -77,6 +77,8 @@ OTT_hurkus_unlocked_tt:0 "§GHürkuş unlocked§!\n"
 OTT_golcuk_unlocked_tt:0 "§GGölcük Dockyards unlocked§!\n"
 axis_defeated:0 "Arabian Axis Defeated"
 ott_german_embargo:0 " German Embargo"
+OTT_executions1_tt:0 "§YAli İhsan Paşa§! is executed \nRebel officers are executed \nTF Paramilitary units are executed \n"
+OTT_executions2_tt:0 "§YMehmed Cavid§! is executed \n§YFilibeli Hilmi§! is executed \n§YKara Kemal§! is executed \n§YAbdülkadir§! is executed \n§YYenibahçeli Nail§! is executed \n§YDoktor Nazım§! is executed \n"
 
 ### Ideas ###
 ott_decline:0 "Ottoman Decline"
@@ -172,7 +174,7 @@ OTT_mecidian_reforms_desc:0 ""
 OTT_legal_reform:0 "Legal Reforms"
 OTT_legal_reform_desc:0 ""
 OTT_judicial_reform:0 "Judicial Reforms"
-OTT_judicial_reform_desc:0 "Judges have the ultimate responsibility for decisions regarding freedoms, rights and duties of persons within their jurisdiction. The independence of each individual judge safeguards every person’s right to have their case decided solely on the basis of the law, the evidence and facts, without any improper influence. A well-functioning, efficient and independent judiciary is an essential requirement for a fair, consistent and neutral administration of justice. Consequently, judicial independence is an indispensable element of the rule of law and democracy."
+OTT_judicial_reform_desc:0 "The independence of judges safeguards every person’s right to have their case decided solely on the basis of law, evidence and facts, without any improper influence. A well-functioning, efficient and independent judiciary is an essential requirement for a fair and consistent administration of justice."
 OTT_administrative_reform:0 "Administrative Reforms"
 OTT_administrative_reform_desc:0 ""
 OTT_bureaucratic_reform:0 "Bureaucratic Reforms"
@@ -734,7 +736,7 @@ ott.95.d:0 "Our illustrious Sultan [Root.GetLeader] announced today his welcomin
 ott.95.a:0 "Long live the Empire!"
 
 ott.96.t:0 "Ottoman Constitution - The Ottoman State"
-ott.96.d:0 "The Sublime Committee for Constitution has been working tirelessly to write our new Constitution. The Parliament has started the process of approving the independent Articles and submitting them for ratification by His Majesty the Sultan.\n\nArticle 1. The Ottoman Empire comprises present territory and possessions, and semi-dependent provinces. It forms an indivisible whole, from which no portion can be detached under any pretext whatever.\nArticle 2. Kostantiniyye is the capital of the Ottoman Empire.\nArticle 3. Islam is the state religion. The state will protect the free exercise of faiths professed in the Empire, and uphold the religious privileges granted to various bodies.\nArticle 4. Turkish is the official language, and required to hold public office."
+ott.96.d:0 "The Sublime Committee for Constitution has been working tirelessly to write our new Constitution. The Parliament has started the process of approving the independent Articles and submitting them for ratification by His Majesty the Sultan.\n\nArticle 1. The Ottoman Empire comprises present territory and possessions, and semi-dependent provinces. It forms an indivisible whole, from which no portion can be detached under any pretext whatever.\nArticle 2. Kostantiniyye is the capital of the Ottoman Empire.\nArticle 3. Islam is the state religion. The state will protect the free exercise of faiths professed in the Empire, and uphold the religious privileges granted to various bodies.\nArticle 4. Turkish is the official language, and is required to hold public office."
 ott.96.a:0 "Approved"
 
 ott.97.t:0 "Ottoman Constitution - The Sultan"
