more Spain work

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -215,38 +215,6 @@ sprd.26.a:0 "This was a mistake!"
 
 ### post-war
 
-#sprd.31.t:0
-#sprd.31.d:0
-#sprd.31.a:0
-
-#sprd.32.t:0
-#sprd.32.d:0
-#sprd.32.a:0
-
-#sprd.33.t:0
-#sprd.33.d:0
-#sprd.33.a:0
-
-#sprd.34.t:0
-#sprd.34.d:0
-#sprd.34.a:0
-
-#sprd.35.t:0
-#sprd.35.d:0
-#sprd.35.a:0
-
-#sprd.36.t:0
-#sprd.36.d:0
-#sprd.36.a:0
-
-#sprd.37.t:0
-#sprd.37.d:0
-#sprd.37.a:0
-
-#sprd.38.t:0
-#sprd.38.d:0
-#sprd.38.a:0
-
 ### foreign ###
 
 sprf.1.t:0 "The Mediterranean Economic Bloc"
@@ -314,6 +282,10 @@ sprc.103.t:0 "The End of the Spanish War"
 sprc.103.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported they learned many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.103.a:0 "Great!"
 
+sprc.122.t:0 "[Root.GetAdjective] Terror"
+sprc.122.d:0 "During ongoing civil war some of our commanders started to use rather doubtfull methods to permanently supress civilian population suspicious of helping our mortal enemies. Such policies, even if looks drastical are neccesary in these dark times."
+sprc.122.a:0 "War is war..."
+
 ### Post-War ###
 
 ### CNT ###
@@ -360,6 +332,36 @@ sprc.221.t:0 "The People's Home"
 sprc.221.d:0 "Now that we have won the Civil War, our Syndicalist dream has become a reality! But should we keep the People's home in Barcelona, or move it to the old capital in Madrid?"
 sprc.221.a:0 "Madrid, for a unified Spain!"
 sprc.221.b:0 "Barcelona is now and forever the People's home."
+
+sprc.225.t:0 "Gibraltar is in CNT-FAI Hands"
+sprc.225.d:0 "The vital port of Gibraltar has been taken by the CNT-FAI rebels. This means a syndicalist nation will control the sea lanes through the straits and be able to block any shipments or naval activity into or out of the Mediterranean. This could be a serious threat to our nation's interests."
+sprc.225.a:0 "Launch an incursion to secure Gibraltar"
+sprc.225.b:0 "Do not get involved"
+
+sprc.226.t:0 "German Forces are Nearing Gibraltar"
+sprc.226.d:0 "German transport ships have been spotted by our coast guard closing in on Gibraltar. It's clear they intend to take the isthmus, and while we surely do not want to risk war with the Germans it would cost us greatly if we lost control of the straits into the Mediterranean."
+sprc.226.a:0 "Ask for French protection"
+sprc.226.b:0 "We will hold Gibraltar ourselves"
+
+sprc.227.t:0 "Protect Gibraltar?"
+sprc.227.d:0 "The CNT-FAI have asked that we use our forces to occupy and protect Gibraltar from an approaching German taskforce. Doing so could, however, mean an incident and possible war. If Germany controls Gibraltar, however, they will also control naval traffic into and out of the Mediterranean."
+sprc.227.a:0 "Protect Gibraltar at all costs"
+sprc.227.b:0 "Establish a naval presence to deter the Germans"
+sprc.227.c:0 "We do not wish to create an incident"
+
+sprc.228.t:0 "[FRA.GetNameDef] Occupies Gibraltar"
+sprc.228.d:0 "At the invitation of [CNT.GetNameDef], forces from [FRA.GetNameDef] have moved in to occupy Gibraltar - no doubt to protect it from an arriving German force fearing syndicalist control over access to the Mediterranean Sea."
+sprc.228.a:0 "
+
+sprc.229.t:0 "[FRA.GetNameDef] Refuses"
+sprc.229.d:0 "Perhaps they fear German might, or perhaps they simply do not value Gibraltar enough. Either way, the [FRA.GetAdjective] government has refused to step into the situation."
+sprc.229.a:0 "Then we protect Gibraltar on our own"
+
+sprc.230.t:0 "[FRA.GetAdjective] Navy Moves In"
+sprc.230.d:0 "While unwilling to help us protect Gibraltar directly, [FRA.GetNameDef] has moved in several powerful ships - ideally to deter the Germans from attacking. We will see if this tactic works."
+sprc.230.a:0 "Fingers crossed!"
+
+
 
 ### Carlists ###
 
@@ -442,3 +444,10 @@ sprc.321.t:0 "The Capital"
 sprc.321.d:0 "Now that we have won the Civil War, our Carlist dream has become a reality! But should we move the national capital to the House of Borbón's home in Madrid, or keep it as is?"
 sprc.321.a:0 "To Historical Madrid!"
 sprc.321.b:0 "A new Borbón Dynasty with a new home."
+
+sprc.322.t:0 "The Troubles Continue"
+sprc.322.d:0 "Despite our victory in the Civil War, there is still a great amount of unrest and partisan activity around the country. Rebuilding and regaining the trust of the people may take some time."
+sprc.322.a:0 "The after-effects of a war"
+
+sprc.323.t:0 "The Nation is Recovering"
+sprc.323.d:0 "Our efforts at rebuilding the country and regaining the trust of our people are paying off."
