Tweaks to the US factions

--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -111,7 +111,10 @@ NEE_entente_tech_sharing:0 "Entente Research Cooperation"
 NEE_entente_tech_sharing_desc:0 "We should help support the Entente by providing New England as a place to help share research form all members of the Entente. We have plenty of universities in New England and we can work together to greatly improve the research output of our allies."
 NEE_refugee_railroad:0 "The Refuge Underground Railroad"
 NEE_refugee_railroad_desc:0 "As the civil war rages on in the rest of the United States, a number of politicians have put forth a bill to help those who wish to seek to escape the war to safety in New England or in Canada. We should fully support this bill and help build an underground railroad to bring people to safety."
-
+NEE_claim_nyc:0 "Claim New York City"
+NEE_claim_nyc_desc:0 "It is time to claim the city of New York City and reunite the city with the rest of the province of New York. The people of the city will welcome us as liberators and protectors when we arrive. This will of course give us the important city of New York for the Commonwealth of New England. "
+NEE_new_england_dominion:0 "New England Dominion"
+NEE_new_england_dominion_desc:0 "With the claiming of New York City, several political leaders have suggested that we go back to the border plans of the Dominion of New England. By this they mean moving south and liberating New Jersey and Pennsylvania. Such a move is controversial but the industrial strength of the two states would be a great boon to the Commonwealth of New England."
 ### Ideas ###
 new_english_nationalism:0 "New English Nationalism"
 NEE_ivy_league:0 "Supported the Ivy League"
