--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -357,7 +357,7 @@ STATE_354:0 "Trabzon"
 STATE_355:0 "Samsun"
 STATE_356:0 "Kastamonu"
 STATE_357:0 "New England"
-STATE_358:0 "New York"
+STATE_358:0 "New York City"
 STATE_359:0 "New Jersey"
 STATE_360:0 "Pennsylvania"
 STATE_361:0 "Maryland"
@@ -795,7 +795,7 @@ STATE_792:0 "Rivne"
 STATE_793:1 "Asturias"
 STATE_794:0 "Srijem"
 STATE_795:0 "Triest"
-STATE_796:0 "New York State"
+STATE_796:0 "New York"
 STATE_797:0 "San Francisco"
 STATE_798:0 "Los Angeles"
 STATE_799:0 "South Shaanxi"
