Fixes, don't remember

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -375,6 +375,15 @@ worldnews.49.b:0 "We will never be defeated, we will keep rising until the Turks
 worldnews.49.c:0 "They might need our support, will they win this time? Can we trust them?"
 worldnews.49.e:0 "They learned nothing! All the traitors will die! Praise the Sultan!"
 
+worldnews.50.t:0 "The Ottoman-Axis War"
+worldnews.50.d:0 "For a long time, the Ottomans have ruled over the Levant and its Arab population. For many of them, this was an outrage, and the Entente capitalised on this during the Weltkrieg to spark a revolt that crippled the Ottoman's war efforts. Albeit unsucessful in the long run, this planted the seeds for future unrest.\n\nThe foundation of the Axis in 1936 seemed like a challenge to the Ottoman Empire, and indeed today this confrontation came to an end as Egypt announced the entry in the war of the entire alliance against the Ottomans. In response, Arabs in all major cities of the Levant rose in revolt, with equipment that many speculate has been provided by these states that are now crossing the border into Ottoman territory."
+worldnews.50.a:0 "The goals of the Axis were always clear. The Levant burns once more."
+worldnews.50.b:0 "The Turks made their last mistake. Today, we free our brothers. The Sultan will fall."
+worldnews.50.c:0 "And so, it seems, ends the story of the Ottoman Empire. A revenge for Gallipoli."
+worldnews.50.e:0 "The Arab people will not stand kings and sultans. Onwards, for Islamic Communism!"
+worldnews.50.f:0 "We will outlast them all. The Ottoman Empire will win. Praise the Sultan!"
+worldnews.50.g:0 "Our old Turkish ally stands on the brink of destruction. Concerning."
+
 ### City Fall Events ###
 
 worldnews.250.t:0 ""
