Exported POL news events to KR_World_News

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -384,6 +384,34 @@ worldnews.50.e:0 "The Arab people will not stand kings and sultans. Onwards, for
 worldnews.50.f:0 "We will outlast them all. The Ottoman Empire will win. Praise the Sultan!"
 worldnews.50.g:0 "Our old Turkish ally stands on the brink of destruction. Concerning."
 
+worldnews.51.t:0 "Poland Elects a New King"
+worldnews.51.d:0 "For almost two decades the Polish throne has remained empty. After the end of the Weltkrieg, a Regency Council was convened to elect the new Polish King. However, constant interference and ineptitude has prevented the Council from selecting a king for all these years. But now, after many weeks of intense debate inside the chambers of the Polish Regency Council, the decision was finally made to elect a new monarch to the long-vacant Polish throne. The coronation of [POL.GetLeader] was held in the palace at Warsaw early in the morning, and has been followed by parades and celebration throughout the nation. It remains to be seen whether the new King can navigate the small Polish nation through the coming storms."
+worldnews.51.a:0 "They made a wise decision."
+worldnews.51.b:0 "They chose the wrong king!"
+worldnews.51.c:0 "Now they can move on."
+worldnews.51.e:0 "To our glorious future!"
+
+worldnews.52.t:0 "Poland Falls to Syndicalists"
+worldnews.52.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Syndicalist forces claim victory, announcing their complete control of the country from the chambers of the defunct Regency Council. The International community has reacted with shock, as the formerly conservative government of the Kingdom has been replaced with a radical Syndicalist government seemingly overnight. Time will tell how this bodes for Europe."
+worldnews.52.a:0 "Welcome our new brothers!"
+worldnews.52.b:0 "Another nation falls to the plague."
+worldnews.52.c:0 "Glory to us!"
+
+worldnews.53.t:0 "Poland Falls to Nationalists"
+worldnews.53.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Polish Nationalist forces claim victory, formally announcing the creation of the new regime from the abandoned steps of the palace at Warsaw. The new nationalist government has rattled their neighbours with immediate proclamations of a 'Greater Polish State' and intentions to unify all Polish people under one flag. Whether or not the new government can make good on their promises remains to be seen."
+worldnews.53.a:0 "A worrisome development."
+worldnews.53.b:0 "To our new future!"
+
+worldnews.54.t:0 "Poland Declares the Republic"
+worldnews.54.d:0 "After several high-profile terror attacks in Poland and the new-total collapse of their economy, a large group of high-ranking Polish officials have released a statement declaring the creation of a new 'Polish Republic'. The declaration was met with immediate declarations of support from many government branches, and it appears that the Republic has taken control of most of the country with almost no bloodshed. The Regency Council, the former ruling authority in Poland, has been dissolved, and the question of the next Polish King left forever unanswered. The people have rallied around the new Republic, and the country's new future appears bright."
+worldnews.54.a:0 "Interesting."
+worldnews.54.b:0 "Long live the Republic!"
+
+worldnews.55.t:0 "The Polish Military Seizes Control"
+worldnews.55.d:0 "In order to prevent a total collapse of the government in Poland, yesterday the Sejm passed an emergency measure to invite the Polish Military to create a new government until the economic and political situations stabilise. The Polish military moved swiftly under the guidance of [POL.GetLeader], who has declared national curfews in the wake of this sudden military takeover. Polish military units now patrol the streets of Warsaw, and many wonder if even after the situation stabilises, the military intends to stay."
+worldnews.55.a:0 "Interesting."
+worldnews.55.b:0 "It is for the best."
+
 ### City Fall Events ###
 
 worldnews.250.t:0 ""
