--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -326,7 +326,7 @@ STATE_323:0 "Nepal"
 STATE_324:0 "Bhutan"
 STATE_325:0 "Yunnan"
 STATE_326:0 "Hong Kong"
-STATE_327:0 "Manila"
+STATE_327:0 "Central Luzon"
 STATE_328:0 "Andong"
 STATE_329:0 "Tuva"
 STATE_330:0 "Mongolia"
@@ -622,12 +622,12 @@ STATE_619:0 "Yarkand"
 STATE_620:0 "Hubei"
 STATE_621:0 "Suiyuan"
 STATE_622:0 "Shaanxi"
-STATE_623:0 "Luzon"
-STATE_624:0 "Central islands"
+STATE_623:0 "Northern Luzon"
+STATE_624:0 "Southern Luzon"
 STATE_625:0 "Samar"
 STATE_626:0 "Palawan"
 STATE_627:0 "Mindanao"
-STATE_628:0 "Cebu"
+STATE_628:0 "Western Visayas"
 STATE_629:0 "Hawaii"
 STATE_630:0 "Johnston Atoll"
 STATE_631:0 "Midway Island"
