--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -41,6 +41,7 @@ SPR_reinforce_madrid:0 "Reserve units are called up in §YMadrid§!\n"
 SPR_workers_rise:0 "Mine and road workers rise up to support the cause!\n"
 SPR_foreign_unit_arrives:0 "Foreign-trained unit arrives in Barcelona\n"
 SPR_supplied_unit_arrives:0 "Supplied militia unit arrives in Burgos\n"
+SPR_become_republic:0 "Name changed to §YThe Spanish Republic§!\n"
 
 ### Ideas ###
 SPR_memories_of_the_republic:0 "Memories of the Republic"
@@ -133,8 +134,6 @@ sprd.10.t:0 "Carlist Protests"
 sprd.10.d:0 "Supporters of the Carlist movement have taken to the streets to protest our government, calling our recent policies 'godless'."
 sprd.10.a:0 "Disperse them"
 
-### General Assassinations ###
-
 sprd.11.t:0 "Assassination!"
 sprd.11.d:0 "Yesterday, late at night, after a long day debating the status of our country's internal security, our current administration's Chief of Security, Miguel Ponte Mansó de Zúñiga, was gunned down on his way home from work."
 sprd.11.a:0 "May he rest in peace"
@@ -213,6 +212,14 @@ sprd.26.t:0 "The Election Day Disaster!"
 sprd.26.d:0 "This Election day has been marred by countless acts of violence, 4 polling places have been bombed, over a thousand people have been killed in other violence. Entire groups of Police and Military troops have disappeared"
 sprd.26.a:0 "This was a mistake!"
 
+sprd.27.t:0 "What to do with the King?"
+sprd.27.d:0 "The war is over and the King is still in a coma. Should we officially announce that Juan III is the new king, or should he remain in the background?"
+sprd.27.a:0 "Name him as Alfonso's successor"
+sprd.27.b:0 "No, perhaps the time of the kingdom is over"
+
+sprd.28.t:0 "Restoring the Monarchy"
+sprd.28.d:0 "After the assassination of Juan, a void was left in the terms of a Royal Regent. Now Juan's older brother Jaime has returned from abroad and is requesting his rightful place as the heir to our Kingdom."
+
 ### post-war
 
 ### foreign ###
@@ -238,8 +245,6 @@ sprf.4.d:0 "The leaders of the CNT-FAI have fled Spain, FAIg arrest and imprison
 sprf.4.a:0 "Give them what they ask!"
 sprf.4.b:0 "Refuse, but give them refuge"
 sprf.4.c:0 "Kick them out"
-
-# 5-6 are clones of 4?
 
 sprf.7.t:0 "pyon"
 sprf.7.d:0 "watashi wa usagi desu."
@@ -267,8 +272,6 @@ sprc.4.a:0 "Arise, workers of Spain!"
 
 ### SPR ###
 
-### Volunteers ###
-
 sprc.101.t:0 "Civil War in Spain!"
 sprc.101.d:0 "The legitimate Spanish Kingdom under Alfonso XIII is under severe threat from anarchists and fanatics! While many are saying that this provides further proof of the terminal weakness of the House of Bourbon, a secure Spain is an important part of our defensive plans. It could be wise to help the Government put an end to these threats."
 sprc.101.a:0 "Send material and technical experts"
@@ -289,8 +292,6 @@ sprc.122.a:0 "War is war..."
 ### Post-War ###
 
 ### CNT ###
-
-### Volunteers ###
 
 sprc.204.t:0 "Anarco-Syndicalist Uprising!"
 sprc.204.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
@@ -340,7 +341,7 @@ sprc.225.b:0 "Do not get involved"
 
 sprc.226.t:0 "German Forces are Nearing Gibraltar"
 sprc.226.d:0 "German transport ships have been spotted by our coast guard closing in on Gibraltar. It's clear they intend to take the isthmus, and while we surely do not want to risk war with the Germans it would cost us greatly if we lost control of the straits into the Mediterranean."
-sprc.226.a:0 "Ask for French protection"
+sprc.226.a:0 "Turn Gibraltar over to the French - they can protect it"
 sprc.226.b:0 "We will hold Gibraltar ourselves"
 
 sprc.227.t:0 "Protect Gibraltar?"
@@ -351,7 +352,8 @@ sprc.227.c:0 "We do not wish to create an incident"
 
 sprc.228.t:0 "[FRA.GetNameDef] Occupies Gibraltar"
 sprc.228.d:0 "At the invitation of [CNT.GetNameDef], forces from [FRA.GetNameDef] have moved in to occupy Gibraltar - no doubt to protect it from an arriving German force fearing syndicalist control over access to the Mediterranean Sea."
-sprc.228.a:0 "
+sprc.228.a:0 "Excellent"
+sprc.228.b:0 "They GAVE away Gibraltar?!"
 
 sprc.229.t:0 "[FRA.GetNameDef] Refuses"
 sprc.229.d:0 "Perhaps they fear German might, or perhaps they simply do not value Gibraltar enough. Either way, the [FRA.GetAdjective] government has refused to step into the situation."
@@ -361,11 +363,40 @@ sprc.230.t:0 "[FRA.GetAdjective] Navy Moves In"
 sprc.230.d:0 "While unwilling to help us protect Gibraltar directly, [FRA.GetNameDef] has moved in several powerful ships - ideally to deter the Germans from attacking. We will see if this tactic works."
 sprc.230.a:0 "Fingers crossed!"
 
+sprc.231.t:0 "The Pieces are in Place"
+sprc.231.d:0 "Gibraltar is guarded by some CNT-FAI militia. They seem to be veterans of a few battles and the isthmus itself is a fortress. Should we give the green light?"
+sprc.231.a:0 "Launch the operation"
+sprc.231.b:0 "Back down - we don't want a war"
 
+sprc.232.t:0 "Germany Backs Down"
+sprc.232.d:0 "The German forces neared Gibraltar...and then simply departed after a couple of days, never beginning their assault. It seems they have backed down."
+sprc.232.a:0 "Hurrah! Crisis averted!"
+
+sprc.233.t:0 "We Have the Rock"
+sprc.233.d:0 "After a quick but pitched battle, our forces have overtaken the defenders and now have hold of Gibraltar."
+sprc.233.a:0 "Our sealanes are safe!"
+
+sprc.234.t:0 "Our Forces Have Been Defeated"
+sprc.234.d:0 "This morning our forces attacked the Rock of Gibraltar and got cast back into the sea despite their valiant efforts."
+sprc.234.a:0 "This is not good"
+
+sprc.235.t:0 "The Pieces are in Place"
+sprc.235.d:0 "Gibraltar is guarded by some CNT-FAI militia. They seem to be veterans of a few battles and the island is a fortress. The French navy has also stationed several ships right around the island. If we go ahead we may risk a wider conflict. Should we give the green light?"
+sprc.236.d:0 "Gibraltar has been occupied by French forces, invited by the CNT-FAI. They seem to be an elite marine unit with naval support and the island is a fortress. Should we give the green light?"
+sprc.236.a:0 "Who cares - attack!"
+sprc.236.b:0 "Back down - we are not ready for a full-scale war"
+
+sprc.237.t:0 "The Rock Remains Standing"
+sprc.237.d:0 "This morning [GER.GetAdjective] forces attacked the Rock of Gibraltar and got cast back into the sea despite their efforts. It remains in our hands."
+sprc.237.a:0 "Germany has been made a fool today!"
+
+sprc.238.t:0 "The Rock has been Lost"
+sprc.238.d:0 "After a quick but pitched battle, [GER.GetAdjective] forces managed to pull off a heroic feat and took the Rock of Gibraltar. They now have a definitive hold over it."
+sprc.238.a:0 "Alas!"
+sprc.238.b:0 "They have gone too far - to war!"
+sprc.238.c:0 "We will not push this further"
 
 ### Carlists ###
-
-### Volunteers ###
 
 sprc.301.t:0 "Carlist Uprising"
 sprc.301.d:0 "Spain is collapsing into anarchy, and the Pope has declared that all good Catholics should support the Carlist cause - We should send aid at once!"
