Fengtian Focus Events, re-taking Chahar.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -262,7 +262,7 @@ FNG_The_Yanshan_Plan_desc:0 "The most straightforward and realistic strategy for
 FNG_Fortress_Manchuria:0 "Fortress Manchuria"
 FNG_Fortress_Manchuria_desc:0 "The Yan Mountains to the South, the Lesser Khigan Range to the West, and the Bohai Gulf to the East create a natural fortress around the Manchurian plain, leaving the Shanhai Pass as the only easy point of entry. Man-made fortification could render Manchuria virtually impenetrable."
 FNG_Wu_Wang_Zai_Ju:0 "Wu Wang Zai Ju"
-FNG_Wu_Wang_Zai_Ju_desc:0 "The ancient Chinese idiom 'Forget not what happened in Ju' alludes to the desperate defence of Ju, the state of Qi's final city, from which it lead a successful campaign to reclaim all of its lost territory. Manchuria shall be our Ju, from which we will reconquer all of China!"
+FNG_Wu_Wang_Zai_Ju_desc:0 "The ancient Chinese idiom 'Forget not what happened in Ju' alludes to the desperate defence of Ju, the state of Qi's final bastion, from which it lead a successful campaign to reclaim all of its lost territory. Manchuria shall be our Ju, from which we will reconquer all of China!"
 FNG_Jehol_Border_Exercises:0 "Jehol Border Exercises"
 FNG_Jehol_Border_Exercises_desc:0 "Border exercises not only reinforce discipline and training, but also serve to give our troops an intimate knowledge of the land they may soon fight in. As a result, if we are pushed onto the defensive, they can more effectively execute tactics, and call in fire support with extreme precision, as they know the lay of the land."
 FNG_Golden_Dragon_Cigarettes:0 "Golden Dragon Cigarettes"
@@ -535,7 +535,7 @@ fengtian.new.27.t:0 "Japanese Investment in Metals and Minerals"
 fengtian.new.27.d:0 "After talks with government representatives, the Sumitomo Zaibatsu has agreed to partially fund metals and mineral prospecting across Fengtian, in return for a proportional share in any companies created to extract any detected resources. With recent discoveries of gold in the Khigan Mountains, Tungsten in Fengtian Province, and various rare minerals in a variety of locations, their investment seems likely to pan out."
 fengtian.new.27.a:0 "Good news"
 fengtian.new.28.t:0 "Japanese Investment in Steel"
-fengtian.new.28.d:0 "Mantetsu has long held Anshan Iron & Steel, China's largest steel processing company, as its subsidiary, and with recent government funded expansion of the Anshan Mines and an atmosphere ripe for investment, has decided to invest further capital in modernising and expanding the company's operations."
+fengtian.new.28.d:0 "Mantetsu has long held Anshan Iron & Steel, China's largest steel processing company, as its subsidiary, and with recent government funded expansion of the Anshan Mines and an atmosphere ripe for investment, it has decided to invest further capital in modernising and expanding the company's operations."
 fengtian.new.28.a:0 "Good news"
 fengtian.new.29.t:0 "Encouraging Chinese Investment"
 fengtian.new.29.d:0 "The vast majority of investment in Fengtian is either sourced in Mantetsu, or the government, and thanks to Wang Yongjiang's reforms the government remains ahead of the Japanese as the country's largest single investor. However, the government's treasury is not infinitely full, and Chinese investors must necessarily pick up some of the slack. Unfortunately, relatively few have the necessary funds, and so serious incentives are necessary to attract investment."
