Some Fengtian localization

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -735,16 +735,19 @@ fengtian.new.75.d:0 "Fengtian's officer corps is an unusual mix of young Chinese
 fengtian.new.75.a:0 "Unfortunate"
 
 fengtian.new.76.t:0 "Expel Japanese Officers"
-fengtian.new.76.d:0 "INSERT"
-fengtian.new.76.a:0 ""
+fengtian.new.76.d:0 "Japan has maintained a military mission in Fengtian ever since the founding of the Fengtian Government in 1926, who were preceeded by over a decade of informal Japanese opperations in support of Zhang Zuolin's Fengtian Clique. The Mission has served to aid many aspects of the military's development, primarily through the supply of arms and equipment, but also training and planning assistance. \n\n Unfortunately, however, the shortage of officers in the aftermath of the civil wars provided Japan with the opportunity to attach Japanese officers to command positions in the field, and even command our units independently. This has had a negative effect upon the morale of our men, making Japan's influence all too obvious, even as the Military Mission attempts, and often succeeds, in influencing our affairs of government. In order for our soldiers and the Chinese people to have any respect for our Government, the Japanese Military Mission must leave."
+fengtian.new.76.a:0 "Expel them all!"
+fengtian.new.76.b:0 "Let us be diplomatic"
 
-fengtian.new.77.t:0 ""
-fengtian.new.77.d:0 ""
-fengtian.new.77.a:0 ""
+fengtian.new.77.t:0 "Japan Declares War"
+fengtian.new.77.d:0 "In response to our expulsion of their officers, the Japanese Government has cut all ties and declared war! Many will look at this as a disaster, but perhaps it is an opportunity in disguise. The truth will be found on the battlefield."
+fengtian.new.77.a:0 "Zhonghua Mingguo Wansui!"
 
-fengtian.new.78.t:0 ""
-fengtian.new.78.d:0 ""
-fengtian.new.78.a:0 ""
+fengtian.new.78.t:0 "Japan Delivers an Ultimatum"
+fengtian.new.78.d:0 "Despite our valiant attempts to remove the Japanese Military Mission, their influence in our government has proven to be too great, forcing us to reinstate the mission. The only other option now would be a rejection of the ultimatum and a declaration of war, lead by patriotic elements of the Zhang Clique."
+fengtian.new.78.d_ultimatum:0 "Negotiations have failed and Japan has delivered a simple ultimatum, we must reinstate the mission or they will immediately declare war."
+fengtian.new.78.a:0 "We have no choice"
+fengtian.new.78.b:0 "Let there be war!"
 
 fengtian.new.79.t:0 ""
 fengtian.new.79.d:0 ""
